CIDH-87 Fix z-index header

--- a/src/app/profile/components/dashboard/layout/header/header.component.sass
+++ b/src/app/profile/components/dashboard/layout/header/header.component.sass
@@ -8,6 +8,7 @@
   color: $white
   padding: 1.2em 5em 1.2em 2em
   border-bottom: 3px solid $turquoise
+  z-index: 1
 
   @include sm()
     padding-right: 1.7em
